<resources>
    <string name="app_name">Box.io</string>
    <string name="choose_box_size">Choose box size:</string>
    <string name="choose_box_color">Choose box color:</string>
    <string name="sign_my_box">I want to sign my box</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
</resources>
