<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/content_container_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/content_container_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/choose_box_size_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_box_size"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <RadioGroup
                android:id="@+id/box_size_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/small_box_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/small"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/medium_box_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/large_box_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/large"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/choose_box_color_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_box_color"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <RadioGroup
                android:id="@+id/box_color_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/red_box_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/orange_box_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orange"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/yellow_box_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/green_box_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/blue_box_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/purple_box_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purple"
                    android:textSize="18sp" />
            </RadioGroup>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_mail_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_e_mail"
                android:paddingBottom="16dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/sign_box_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_my_box"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:paddingBottom="16dp"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/confirm_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_24dp" />
</android.support.design.widget.CoordinatorLayout>